<resources>
    <string name="app_name">fraggmenttt</string>
    <string name="tab_text_1">Contacts</string>
    <string name="tab_text_2">Webview</string>
    <string name="tab_text_3">Pics</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="textview1">Contacts</string>
    <string name="textview2">Webview</string>
    <string name="textview3">pics</string>
    <string name="textview10">TextView</string>
    <string name="texty">TextView</string>
    <string name="imagedetail">image</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="tab_text_4">Form</string>
    <string name="date_of_birth">Enter Date of Birth (DD/MM/YYYY)</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_lastname">Enter Last Name</string>
    <string name="enter_firstname">Enter First Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="submit">Submit</string>
    <string name="pan_no">Enter PAN No.</string>
    <string name="nameerror">Enter a Valid First name</string>
    <string name="lastnameerror">Enter a valid last name</string>
    <string name="phoneerror">Enter valid mobile no</string>
    <string name="dateerror">enter valid Date of birth</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="panerror">Enter a valid pan no.</string>
    <string name="additionaldetails">Additional Details</string>
    <string name="text_accounts">Accounts</string>
    <string name="hint_last_name">last name:</string>
    <string name="hint_first_name">first</string>
    <string name="hint_name">First name:</string>
    <string name="filled_forms">Filled Forms</string>
    <string name="hint_dob">Date Of Birth:</string>
    <string name="dob">Dob</string>
    <string name="hint_mobile">Phone:</string>
    <string name="mobile">number</string>
    <string name="hint_email">Email:</string>
    <string name="email">email</string>
    <string name="hint_pan">PAN no:</string>
    <string name="pan">number</string>
    <string name="gotodatabase">gotodatabase</string>
    <string name="date">DOB</string>

    <string name="facebook_app_id">1714008675382339</string>
    <string name="fb_login_protocol_scheme">fb1714008675382339</string>
    <string name="tab_text_5">FB</string>
    <string name="name">details</string>
    <string name="gender">gender</string>
    <string name="genderit">gender</string>
    <string name="clear">Clear</string>
    <string name="hint_uri">URI</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="tabbutton">Tabs</string>
    <string name="mapbutton">Maps</string>
    <string name="button">maps</string>
    <string name="tab_text_6">Maps</string>

</resources>

