<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.LinearLayoutCompat
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"

    tools:context=".FragmentFour">




    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/profile"
        android:layout_width="108dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@android:color/darker_gray" />


    <android.support.design.widget.TextInputEditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_firstname"
        android:inputType="textCapCharacters|textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#cccccc" />


        <android.support.design.widget.TextInputEditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_lastname"
        android:inputType="textCapCharacters|textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#cccccc" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextDob"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/date_of_birth"
            android:inputType="none|date"
            android:textColor="#FFFFFF"
            android:textColorHint="#cccccc" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/setdobbutton"
            android:layout_width="31dp"
            android:layout_height="33dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="12dp"
            android:background="@drawable/date_icon"
            android:textColor="@android:color/white" />
    </RelativeLayout>


    <android.support.design.widget.TextInputEditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textImeMultiLine|textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#cccccc" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/editTextMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:maxLength="10"
        android:hint="@string/enter_mobile_number"

        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#cccccc" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/panno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:layout_alignParentBottom="true"
        android:hint="@string/pan_no"
        android:inputType="textCapCharacters"

        android:textColor="#FFFFFF"
        android:textColorHint="#cccccc" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonClear"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"

            android:layout_alignParentTop="true"
            android:text="@string/clear"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonSubmit"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"

            android:text="@string/submit"
            android:textColor="@android:color/white" />

    </RelativeLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/gotodatabasebutton"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:text="@string/gotodatabase"
        android:textColor="@android:color/white" />


<!--</LinearLayout>-->
</android.support.v7.widget.LinearLayoutCompat>